# burn-bench

./: .gitignore  Cargo.toml  README.md  burn.toml  cubecl.toml
.cargo/: config.toml
.github/workflows/: benchmarks.yml
backend-comparison/: .gitignore  Cargo.toml  README.md  build.rs  compare.ps1  compare.sh
backend-comparison/benches/: autodiff.rs  binary.rs  collective.rs  conv2d.rs  conv3d.rs  conv_transpose2d.rs  conv_transpose3d.rs  custom_gelu.rs  data.rs  load_record.rs  matmul.rs  matmul_fused.rs  max_pool2d.rs  random.rs  reduce.rs  remote.rs  resnet.rs  softmax.rs  transformer_encoder.rs  unary.rs
backend-comparison/src/: lib.rs
backend-comparison/src/burnbenchapp/: base.rs  dependency.rs  mod.rs  reports.rs
backend-comparison/src/persistence/: base.rs  system_info.rs
burnbench/: Cargo.toml  README.md
burnbench/src/: __private.rs  benchmark.rs  lib.rs  system_info.rs
burnbench/src/persistence/: base.rs
burnbench/src/runner/: base.rs  dependency.rs  mod.rs  processor.rs  reports.rs
burnbench/src/runner/auth/: base.rs  mod.rs
crates/backend-comparison/: Cargo.toml  README.md  build.rs
crates/backend-comparison/benches/: all_reduce.rs  attention.rs  autodiff.rs  binary.rs  bool_select.rs  conv2d.rs  conv3d.rs  conv_transpose2d.rs  conv_transpose3d.rs  custom_gelu.rs  data.rs  grid_sample.rs  launch_overhead.rs  linear.rs  load_record.rs  matmul.rs  matmul_fused.rs  max_pool2d.rs  random.rs  reduce.rs  remote.rs  softmax.rs  to_device.rs  transformer_encoder.rs  unary.rs
crates/burnbench/: Cargo.toml  README.md
crates/burnbench/src/: __private.rs  benchmark.rs  lib.rs  system_info.rs
crates/burnbench/src/persistence/: base.rs
crates/burnbench/src/runner/: base.rs  dependency.rs  mod.rs  processor.rs  reports.rs  workflow.rs
crates/burnbench/src/runner/auth/: base.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bench.rs  compare.rs  mod.rs  profile.rs  versions.rs
