[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
exclude = ["xtask"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
arboard = "3.4.1"
chrono = "0.4.39"
clap = { version = "4.5.27" }
comfy-table = "7.1.4"
derive-new = { version = "0.7.0", default-features = false }
dirs = "6"
futures-lite = { version = "2.3.0", default-features = false }
glob = "0.3.1"
hex = "0.4.3"
hmac-sha256 = "1.1.12"
indicatif = "0.18"
log = { version = "0.4.25", default-features = false }
os_info = "3.10.0"
percent-encoding = "2.3.1"
phf = { version = "0.13", features = ["macros"] } # for package info static map
rand = "0.10"
regex = "1.11.1"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.218" }
serde_json = { version = "1.0.140", default-features = false }
strum = "0.28"
sysinfo = { version = "0.38", features = ["serde"] }
tokio = "1.47"
toml = "1.1"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
wgpu = "29"
wsl = "0.1.0"

# Tests
rstest = "0.26"
serial_test = "3.2.0"

# Build
cfg-if = "1.0.0"
semver = "1.0.26"
tempfile = "3.24.0"


[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
