[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "backend-comparison"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-bench/tree/main/backend-comparison"
version = "0.1.0"

[features]
# we depend on wgpu and autotune by default because we use the burn-wgpu crate to get system information
candle-accelerate = ["burn/candle", "burn/accelerate"]
candle-cpu = ["burn/candle"]
candle-cuda = ["burn/candle-cuda"]
candle-metal = ["burn/candle", "burn/candle-metal"]
cuda = ["burn/cuda"]
cuda-fusion = ["cuda", "burn/fusion"]
default = ["burn/std", "burn/autodiff", "burn/wgpu", "burn/autotune"]
hip = ["burn/hip"]
metal = ["burn/metal"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
ndarray-simd = ["burn/ndarray", "burn/simd"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu", "burn/autotune"]
wgpu-fusion = ["wgpu", "burn/fusion"]
wgpu-spirv = ["burn/vulkan", "burn/autotune"]
wgpu-spirv-fusion = ["wgpu-spirv", "burn/fusion"]

[dependencies]
burn = { workspace =  true }
burn-common = { workspace =  true }

semver = { workspace = true }
arboard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
os_info = { workspace = true }
phf = { workspace = true }
percent-encoding = { workspace = true }
rand = { version = "0.9.0" }                          # pull the same version as burn
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
wgpu = { workspace = true }
wsl = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
semver = { workspace = true }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "binary"

[[bench]]
harness = false
name = "max-pool2d"
path = "benches/max_pool2d.rs"

[[bench]]
harness = false
name = "conv-transpose2d"
path = "benches/conv_transpose2d.rs"

[[bench]]
harness = false
name = "conv-transpose3d"
path = "benches/conv_transpose3d.rs"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "conv3d"

[[bench]]
harness = false
name = "matmul"

[[bench]]
harness = false
name = "matmul-fused"
path = "benches/matmul_fused.rs"

[[bench]]
harness = false
name = "data"

[[bench]]
harness = false
name = "load-record"
path = "benches/load_record.rs"

[[bench]]
harness = false
name = "custom-gelu"
path = "benches/custom_gelu.rs"

[[bench]]
harness = false
name = "transformer-encoder"
path = "benches/transformer_encoder.rs"

[[bench]]
harness = false
name = "resnet50"
path = "benches/resnet.rs"

[[bench]]
harness = false
name = "autodiff"

[[bench]]
harness = false
name = "reduce"

[[bin]]
name = "burnbench"
path = "src/bin/burnbench.rs"
