[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "backend-comparison"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-bench/tree/main/backend-comparison"
version = "0.1.0"

[features]
candle-accelerate = ["burn/candle", "burn/accelerate"]
candle-cpu = ["burn/candle"]
candle-cuda = ["burn/candle-cuda"]
candle-metal = ["burn/candle", "burn/candle-metal"]
cuda = ["burn/cuda"]
cuda-fusion = ["cuda", "burn/fusion"]
default = ["burn/std", "burn/autodiff", "burn/autotune"]
rocm = ["burn/rocm"]
rocm-fusion = ["rocm", "burn/fusion"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["ndarray", "burn/openblas"]
ndarray-simd = ["ndarray", "burn/simd"]
tch-cpu = ["burn/tch"]
tch-cuda = ["burn/tch"]
tch-metal = ["burn/tch"]
wgpu = ["burn/wgpu", "burn/autotune"]
wgpu-fusion = ["wgpu", "burn/fusion"]
vulkan = ["burn/vulkan", "burn/autotune"]
vulkan-fusion = ["vulkan", "burn/fusion"]
metal = ["burn/metal", "burn/autotune"]
metal-fusion = ["metal", "burn/fusion"]
f32 = []
f16 = []
bf16 = []
flex32 = []
legacy-v16 = []
legacy-v17 = []
server = ["burn/server"]
remote = ["burn/remote"]
distributed = ["server", "remote"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }
burn-common = { git = "https://github.com/tracel-ai/burn", branch = "main" }

burnbench = { path = "../burnbench" }

semver = { workspace = true }
arboard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
os_info = { workspace = true }
phf = { workspace = true }
percent-encoding = { workspace = true }
rand = { version = "0.9.0" }                          # pull the same version as burn
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
wgpu = { workspace = true }
wsl = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1.44", features = ["rt-multi-thread"] }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
semver = { workspace = true }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "binary"

[[bench]]
harness = false
name = "max-pool2d"
path = "benches/max_pool2d.rs"

[[bench]]
harness = false
name = "conv-transpose2d"
path = "benches/conv_transpose2d.rs"

[[bench]]
harness = false
name = "conv-transpose3d"
path = "benches/conv_transpose3d.rs"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "conv3d"

[[bench]]
harness = false
name = "matmul"

[[bench]]
harness = false
name = "matmul-fused"
path = "benches/matmul_fused.rs"

[[bench]]
harness = false
name = "data"

[[bench]]
harness = false
name = "load-record"
path = "benches/load_record.rs"

[[bench]]
harness = false
name = "custom-gelu"
path = "benches/custom_gelu.rs"

[[bench]]
harness = false
name = "transformer-encoder"
path = "benches/transformer_encoder.rs"

[[bench]]
harness = false
name = "resnet50"
path = "benches/resnet.rs"

[[bench]]
harness = false
name = "autodiff"

[[bench]]
harness = false
name = "reduce"

[[bench]]
harness = false
name = "random"

[[bench]]
harness = false
name = "remote"
required-features = ["distributed"]

[[bench]]
harness = false
name = "softmax"
