[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "backend-comparison"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-bench/tree/main/backend-comparison"
version = "0.1.0"

[features]
bf16 = []
candle-accelerate = ["burn/candle", "burn/accelerate"]
candle-cpu = ["burn/candle"]
candle-cuda = ["burn/candle-cuda"]
candle-metal = ["burn/candle", "burn/candle-metal"]
cpu = ["burn/cpu", "burn/autotune"]
cpu-fusion = ["cpu", "burn/fusion"]
cuda = ["burn/cuda", "burn/autotune"]
cuda-fusion = ["cuda", "burn/fusion"]
default = ["burn/std", "burn/autodiff"]
remote = ["server", "burn/remote"]
distributed = ["burn/distributed"]
multi-device= []
f16 = []
f32 = []
flex32 = []
legacy-v16 = []
legacy-v17 = []
metal = ["burn/metal", "burn/autotune"]
metal-fusion = ["metal", "burn/fusion"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["ndarray", "burn/openblas"]
ndarray-simd = ["ndarray", "burn/simd"]
rocm = ["burn/rocm", "burn/autotune"]
rocm-fusion = ["rocm", "burn/fusion"]
server = ["burn/server"]
tch-cpu = ["burn/tch"]
tch-cuda = ["burn/tch"]
tch-metal = ["burn/tch"]
vulkan = ["burn/vulkan", "burn/autotune"]
vulkan-fusion = ["vulkan", "burn/fusion"]
wgpu = ["burn/wgpu", "burn/autotune"]
wgpu-fusion = ["wgpu", "burn/fusion"]

[dependencies]
# Use the last released version to avoid possible breaking changes
# burn = { path = "../../../burn/crates/burn", default-features = false }
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }

burnbench = { path = "../burnbench" }

arboard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
os_info = { workspace = true }
percent-encoding = { workspace = true }
phf = { workspace = true }
rand = { version = "0.10.0" }                                # pull the same version as burn
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
wsl = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
semver = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "binary"

[[bench]]
harness = false
name = "launch-overhead"
path = "benches/launch_overhead.rs"

[[bench]]
harness = false
name = "max-pool2d"
path = "benches/max_pool2d.rs"

[[bench]]
harness = false
name = "conv-transpose2d"
path = "benches/conv_transpose2d.rs"

[[bench]]
harness = false
name = "conv-transpose3d"
path = "benches/conv_transpose3d.rs"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "conv3d"

[[bench]]
harness = false
name = "matmul"

[[bench]]
harness = false
name = "linear"

[[bench]]
harness = false
name = "matmul-fused"
path = "benches/matmul_fused.rs"

[[bench]]
harness = false
name = "data"

[[bench]]
harness = false
name = "load-record"
path = "benches/load_record.rs"

[[bench]]
harness = false
name = "custom-gelu"
path = "benches/custom_gelu.rs"

[[bench]]
harness = false
name = "transformer-encoder"
path = "benches/transformer_encoder.rs"

[[bench]]
harness = false
name = "autodiff"

[[bench]]
harness = false
name = "reduce"

[[bench]]
harness = false
name = "random"

[[bench]]
harness = false
name = "remote"
required-features = ["remote"]

[[bench]]
harness = false
name = "softmax"

[[bench]]
harness = false
name = "grid_sample"

[[bench]]
harness = false
name = "bool_select"

[[bench]]
harness = false
name = "attention"

[[bench]]
harness = false
name = "to-device"
path = "benches/to_device.rs"
required-features = ["multi-device"]

[[bench]]
harness = false
name = "all-reduce"
path = "benches/all_reduce.rs"
required-features = ["multi-device", "distributed"]
