[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "burnbench"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-bench/"
version = "0.1.0"

[features]
persistence = []
runner = []

[dependencies]
arboard = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
futures-lite = { workspace = true, features = ["std"] }
glob = { workspace = true }
hex = { workspace = true }
hmac-sha256 = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
os_info = { workspace = true }
percent-encoding = { workspace = true }
phf = { workspace = true }
rand = { workspace = true }                             # pull the same version as burn
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wgpu = { workspace = true }
wsl = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[[bin]]
name = "burnbench"
path = "src/bin/burnbench.rs"
